Introduced Authentication API and fixed issues/2